# ocr_project

./: .gitignore  DEPLOYMENT.md  README.md  all_project_todo.txt  docker-compose.yml  index.html  install-local.bat  notes.txt  ocr.db  package-lock.json  package.json  req.txt  req_final.txt  requirements.txt  run-local.bat  running.txt  start-dev.js  start-local.bat  start.command  stop-local.bat  stop.command  todo.txt
assets/: index-DhqjymsC.css  index-DtHFz0cH.js
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: auth.py  config.py  main.py
backend/app/api/: errors.py  (+1 more)
backend/scripts/: migrate_mongo_to_sqlite.py
dataset/train/: labels.json
dataset/val/: labels.json
dump/ocr_database/: documents.bson  documents.metadata.json  tags.bson  tags.metadata.json
electron/: main.js
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: AboutPage.svelte  ActivityLogsPage.svelte  AdminUsersPage.svelte  App.svelte  ArchivePage.svelte  ChatbotPage.svelte  DocumentClassicPage.svelte  DocumentEditorPage.svelte  DocumentPage.svelte  HomePage.svelte  LoginPage.svelte  RegisterPage.svelte  SettingsPage.svelte  app copy.css  app.css  main.ts
how-to/: expor_import_db_uploads.txt  install_everything_to_win.txt  workflow.txt
notebooks/: handwritten_text_playbook.ipynb
src/: main.py  python_specs.py
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: main.rs
start_mac/: start.command
start_win/: install-local.bat  run-local.bat  start-local.bat
(+51 files in other folders)
