[package]
name = "ocr_project_tauri"
version = "0.1.0"
description = "Tauri desktop shell for OCR Project"
authors = ["ocr_project"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
